[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "projectnetzero"
version = "3.2"
description = "Optimize your Python code for lower CO2 emissions"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.scripts]
projectnetzero = "projectnetzero.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
